# sailo-rs

./: .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile.platform  Dockerfile.rpm-validator  Dockerfile.rust  README.md  build.rs  kaniko.sh
src/: lib.rs  sailfishapp.rs
