[package]
name = "sailors"
version = "0.1.0"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmetaobject = { version = "0.2" }

log = "0.4"

anyhow = "1"
thiserror = "1"

cpp = "0.5"

[build-dependencies]
cpp_build = "0.5"
anyhow = "1"
